codegen/5.0.0/docs/QosStaticLimits.md
# QosStaticLimits

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**MinReadsBwMbps** | **int64** | Minimal amount of performance to provide when there is resource contention | [optional] [default to null]
**MaxReadsBwMbps** | **int64** | Maximal amount of performance to provide when there is no resource contention | [optional] [default to null]
**MinWritesBwMbps** | **int64** | Minimal amount of performance to provide when there is resource contention | [optional] [default to null]
**MaxWritesBwMbps** | **int64** | Maximal amount of performance to provide when there is no resource contention | [optional] [default to null]
**MinReadsIops** | **int64** | Minimal amount of performance to provide when there is resource contention | [optional] [default to null]
**MaxReadsIops** | **int64** | Maximal amount of performance to provide when there is no resource contention | [optional] [default to null]
**MinWritesIops** | **int64** | Minimal amount of performance to provide when there is resource contention | [optional] [default to null]
**MaxWritesIops** | **int64** | Maximal amount of performance to provide when there is no resource contention | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

