codegen/5.2.0/docs/QosStaticLimits.md
# QosStaticLimits

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**MinReadsBwMbps** | **int64** | Minimum performance to provide when there is resource contention. | [optional] [default to null]
**MaxReadsBwMbps** | **int64** | Maximum performance to provide when there is no resource contention. | [optional] [default to null]
**MinWritesBwMbps** | **int64** | Minimum performance to provide when there is resource contention. | [optional] [default to null]
**MaxWritesBwMbps** | **int64** | Maximum performance to provide when there is no resource contention. | [optional] [default to null]
**MinReadsIops** | **int64** | Minimum performance to provide when there is resource contention. | [optional] [default to null]
**MaxReadsIops** | **int64** | Maximum performance to provide when there is no resource contention. | [optional] [default to null]
**MinWritesIops** | **int64** | Minimum performance to provide when there is resource contention. | [optional] [default to null]
**MaxWritesIops** | **int64** | Maximum performance to provide when there is no resource contention. | [optional] [default to null]
**BurstReadsBwMb** | **int64** | Burst read bandwidth (in MB/s). | [optional] [default to null]
**BurstReadsLoanMb** | **int64** | Burst read credits (in MB/s). | [optional] [default to null]
**BurstWritesBwMb** | **int64** | Burst write bandwidth (in MB/s). | [optional] [default to null]
**BurstWritesLoanMb** | **int64** | Burst write credits (in MB/s). | [optional] [default to null]
**BurstReadsIops** | **int64** | Burst read IOPS. | [optional] [default to null]
**BurstReadsLoanIops** | **int64** | Burst read IOPS credits. | [optional] [default to null]
**BurstWritesIops** | **int64** | Burst write IOPS. | [optional] [default to null]
**BurstWritesLoanIops** | **int64** | Burst write IOPS credits. | [optional] [default to null]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

